Updated markdown example with correct usage

--- a/nbs/00_auth.ipynb
+++ b/nbs/00_auth.ipynb
@@ -413,16 +413,11 @@
    "source": [
     "### Manual Testing Instructions\n",
     "\n",
-    "To manually test the authentication flow with a live server, you can run the following cells in order which will run a FastHTML server inside the notebook using `JupyUvi`:\n",
+    "To manually test the authentication flow with a live server, you can run the below cells in order which will run a FastHTML server inside the notebook using `JupyUvi`:\n",
     "\n",
-    "1. First, run the cell above to create the test app\n",
-    "2. Then start the server:\n",
-    "```python\n",
-    "server = app.serve(port=5001, host='127.0.0.1', reload=False)\n",
-    "```\n",
-    "3. Visit http://127.0.0.1:5001 in your browser\n",
-    "4. Test the authentication flow\n",
-    "5. When done, stop the server:\n",
+    "1. Visit http://0.0.0.0:8000 in your browser (or uncomment the `HTMX()` cell to view in nb)\n",
+    "2. Test the authentication flow\n",
+    "3. When done, stop the server:\n",
     "```python\n",
     "server.stop()\n",
     "```"
@@ -430,9 +425,92 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "#| eval: false\n# Import FastHTML components\nfrom fasthtml.common import *\n\n# Create the FastHTML app with authentication beforeware\nbeforeware = Beforeware(\n    user_auth_before,\n    skip=[r'/auth/.*', r'/public/.*', '/']\n)\n\napp, rt = fast_app(before=beforeware)\n\n# Public routes\n@rt('/')\ndef get():\n    return Div(\n        H1('Authentication Test App'),\n        P('This is the public home page'),\n        A('Login', href='/auth/login'),\n        ' | ',\n        A('Protected Page', href='/protected')\n    )\n\n@rt('/auth/login')\ndef get():\n    return Div(\n        H1('Login'),\n        Form(\n            Input(name='email', type='email', placeholder='Email', value='test@example.com'),\n            Input(name='password', type='password', placeholder='Password', value='password123'),\n            Button('Login', type='submit'),\n            method='post'\n        )\n    )\n\n@rt('/auth/login')\ndef post(email: str, password: str, sess):\n    user = get_user_by_email(email)\n    \n    if user and verify_password(password, user['password']):\n        # Login successful\n        sess['auth'] = True\n        sess['user_id'] = user['id']\n        sess['user'] = {'id': user['id'], 'email': user['email']}\n        return Div(\n            P('Login successful!'),\n            P(f\"Logged in as: {user['email']}\"),\n            A('Go to protected page', href='/protected')\n        )\n    else:\n        return Div(\n            P('Invalid credentials', style='color: red'),\n            A('Try again', href='/auth/login')\n        )\n\n@rt('/auth/logout')\ndef get(sess):\n    sess.clear()\n    return Div(\n        P('Logged out successfully'),\n        A('Go home', href='/')\n    )\n\n# Protected routes\n@rt('/protected')\ndef get(sess):\n    user = get_user_from_session(sess)\n    if not user:\n        return Div(\n            P('Access denied - not authenticated', style='color: red'),\n            A('Login', href='/auth/login')\n        )\n    \n    return Div(\n        H1('Protected Page'),\n        P(f\"Welcome {user['email']}!\"),\n        P('This page requires authentication'),\n        A('Logout', href='/auth/logout')\n    )\n\nprint(\"FastHTML app created with authentication\")"
+   "source": [
+    "#| eval: false\n",
+    "# Import FastHTML components\n",
+    "from fasthtml.common import *\n",
+    "\n",
+    "# Create the FastHTML app with authentication beforeware\n",
+    "beforeware = Beforeware(\n",
+    "    user_auth_before,\n",
+    "    skip=[r'/auth/.*', r'/public/.*', '/']\n",
+    ")\n",
+    "\n",
+    "app, rt = fast_app(before=beforeware)\n",
+    "\n",
+    "# Public routes\n",
+    "@rt('/')\n",
+    "def get():\n",
+    "    return Div(\n",
+    "        H1('Authentication Test App'),\n",
+    "        P('This is the public home page'),\n",
+    "        A('Login', href='/auth/login'),\n",
+    "        ' | ',\n",
+    "        A('Protected Page', href='/protected')\n",
+    "    )\n",
+    "\n",
+    "@rt('/auth/login')\n",
+    "def get():\n",
+    "    return Div(\n",
+    "        H1('Login'),\n",
+    "        Form(\n",
+    "            Input(name='email', type='email', placeholder='Email', value='test@example.com'),\n",
+    "            Input(name='password', type='password', placeholder='Password', value='password123'),\n",
+    "            Button('Login', type='submit'),\n",
+    "            method='post'\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "@rt('/auth/login')\n",
+    "def post(email: str, password: str, sess):\n",
+    "    user = get_user_by_email(email)\n",
+    "    \n",
+    "    if user and verify_password(password, user['password']):\n",
+    "        # Login successful\n",
+    "        sess['auth'] = True\n",
+    "        sess['user_id'] = user['id']\n",
+    "        sess['user'] = {'id': user['id'], 'email': user['email']}\n",
+    "        return Div(\n",
+    "            P('Login successful!'),\n",
+    "            P(f\"Logged in as: {user['email']}\"),\n",
+    "            A('Go to protected page', href='/protected')\n",
+    "        )\n",
+    "    else:\n",
+    "        return Div(\n",
+    "            P('Invalid credentials', style='color: red'),\n",
+    "            A('Try again', href='/auth/login')\n",
+    "        )\n",
+    "\n",
+    "@rt('/auth/logout')\n",
+    "def get(sess):\n",
+    "    sess.clear()\n",
+    "    return Div(\n",
+    "        P('Logged out successfully'),\n",
+    "        A('Go home', href='/')\n",
+    "    )\n",
+    "\n",
+    "# Protected routes\n",
+    "@rt('/protected')\n",
+    "def get(sess):\n",
+    "    user = get_user_from_session(sess)\n",
+    "    if not user:\n",
+    "        return Div(\n",
+    "            P('Access denied - not authenticated', style='color: red'),\n",
+    "            A('Login', href='/auth/login')\n",
+    "        )\n",
+    "    \n",
+    "    return Div(\n",
+    "        H1('Protected Page'),\n",
+    "        P(f\"Welcome {user['email']}!\"),\n",
+    "        P('This page requires authentication'),\n",
+    "        A('Logout', href='/auth/logout')\n",
+    "    )\n",
+    "\n",
+    "print(\"FastHTML app created with authentication\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -445,9 +523,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "#| eval: false\n# Create and start the server\n# Note: This cell is for manual testing/demonstration only\nfrom fasthtml.jupyter import JupyUvi, HTMX\n\nserver = JupyUvi(app)\nprint(\"Server started on http://0.0.0.0:8000\")\nprint(\"\\nTest URLs:\")\nprint(\"- Home: http://0.0.0.0:8000/\")\nprint(\"- Login: http://0.0.0.0:8000/auth/login\")\nprint(\"- Protected: http://0.0.0.0:8000/protected\")\nprint(\"\\nTest credentials:\")\nprint(\"- Email: test@example.com\")\nprint(\"- Password: password123\")"
+   "source": [
+    "#| eval: false\n",
+    "# Create and start the server\n",
+    "# Note: This cell is for manual testing/demonstration only\n",
+    "from fasthtml.jupyter import JupyUvi, HTMX\n",
+    "\n",
+    "server = JupyUvi(app)\n",
+    "print(\"Server started on http://0.0.0.0:8000\")\n",
+    "print(\"\\nTest URLs:\")\n",
+    "print(\"- Home: http://0.0.0.0:8000/\")\n",
+    "print(\"- Login: http://0.0.0.0:8000/auth/login\")\n",
+    "print(\"- Protected: http://0.0.0.0:8000/protected\")\n",
+    "print(\"\\nTest credentials:\")\n",
+    "print(\"- Email: test@example.com\")\n",
+    "print(\"- Password: password123\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -470,9 +564,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "#| eval: false\n# Test the authentication flow programmatically\n# Note: This requires the server to be running from the previous cell\nimport httpx\nimport asyncio\n\n# Wait a moment for the server to start\nawait asyncio.sleep(1)\n\n# Create a client with cookie support\nwith httpx.Client(base_url=\"http://0.0.0.0:8000\") as client:\n    print(\"Testing authentication flow...\")\n    \n    # 1. Try to access protected page (should fail)\n    response = client.get(\"/protected\")\n    assert \"Access denied\" in response.text\n    print(\"✓ Protected page blocked for unauthenticated user\")\n    \n    # 2. Login with valid credentials\n    login_data = {\n        \"email\": \"test@example.com\",\n        \"password\": \"password123\"\n    }\n    response = client.post(\"/auth/login\", data=login_data)\n    assert \"Login successful\" in response.text\n    print(\"✓ Login successful\")\n    \n    # 3. Access protected page (should work now)\n    response = client.get(\"/protected\")\n    assert \"Welcome test@example.com\" in response.text\n    print(\"✓ Protected page accessible after login\")\n    \n    # 4. Test invalid login\n    bad_login_data = {\n        \"email\": \"test@example.com\",\n        \"password\": \"wrong_password\"\n    }\n    response = client.post(\"/auth/login\", data=bad_login_data)\n    assert \"Invalid credentials\" in response.text\n    print(\"✓ Invalid credentials rejected\")\n    \n    # 5. Logout\n    response = client.get(\"/auth/logout\")\n    assert \"Logged out successfully\" in response.text\n    print(\"✓ Logout successful\")\n    \n    # 6. Try protected page again (should fail)\n    response = client.get(\"/protected\")\n    assert \"Access denied\" in response.text\n    print(\"✓ Protected page blocked after logout\")\n    \nprint(\"\\n✅ Full authentication flow working correctly!\")"
+   "source": [
+    "#| eval: false\n",
+    "# Test the authentication flow programmatically\n",
+    "# Note: This requires the server to be running from the previous cell\n",
+    "import httpx\n",
+    "import asyncio\n",
+    "\n",
+    "# Wait a moment for the server to start\n",
+    "await asyncio.sleep(1)\n",
+    "\n",
+    "# Create a client with cookie support\n",
+    "with httpx.Client(base_url=\"http://0.0.0.0:8000\") as client:\n",
+    "    print(\"Testing authentication flow...\")\n",
+    "    \n",
+    "    # 1. Try to access protected page (should fail)\n",
+    "    response = client.get(\"/protected\")\n",
+    "    assert \"Access denied\" in response.text\n",
+    "    print(\"✓ Protected page blocked for unauthenticated user\")\n",
+    "    \n",
+    "    # 2. Login with valid credentials\n",
+    "    login_data = {\n",
+    "        \"email\": \"test@example.com\",\n",
+    "        \"password\": \"password123\"\n",
+    "    }\n",
+    "    response = client.post(\"/auth/login\", data=login_data)\n",
+    "    assert \"Login successful\" in response.text\n",
+    "    print(\"✓ Login successful\")\n",
+    "    \n",
+    "    # 3. Access protected page (should work now)\n",
+    "    response = client.get(\"/protected\")\n",
+    "    assert \"Welcome test@example.com\" in response.text\n",
+    "    print(\"✓ Protected page accessible after login\")\n",
+    "    \n",
+    "    # 4. Test invalid login\n",
+    "    bad_login_data = {\n",
+    "        \"email\": \"test@example.com\",\n",
+    "        \"password\": \"wrong_password\"\n",
+    "    }\n",
+    "    response = client.post(\"/auth/login\", data=bad_login_data)\n",
+    "    assert \"Invalid credentials\" in response.text\n",
+    "    print(\"✓ Invalid credentials rejected\")\n",
+    "    \n",
+    "    # 5. Logout\n",
+    "    response = client.get(\"/auth/logout\")\n",
+    "    assert \"Logged out successfully\" in response.text\n",
+    "    print(\"✓ Logout successful\")\n",
+    "    \n",
+    "    # 6. Try protected page again (should fail)\n",
+    "    response = client.get(\"/protected\")\n",
+    "    assert \"Access denied\" in response.text\n",
+    "    print(\"✓ Protected page blocked after logout\")\n",
+    "    \n",
+    "print(\"\\n✅ Full authentication flow working correctly!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -485,9 +633,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "#| eval: false\n# Stop the server gracefully\n# Note: Always run this after testing to clean up\nprint(\"Stopping server...\")\nserver.stop()\nprint(\"✓ Server stopped gracefully\")\nprint(\"\\n🎉 All tests passed! Authentication utilities are working correctly with FastHTML.\")"
+   "source": [
+    "#| eval: false\n",
+    "# Stop the server gracefully\n",
+    "# Note: Always run this after testing to clean up\n",
+    "print(\"Stopping server...\")\n",
+    "server.stop()\n",
+    "print(\"✓ Server stopped gracefully\")\n",
+    "print(\"\\n🎉 All tests passed! Authentication utilities are working correctly with FastHTML.\")"
+   ]
   },
   {
    "cell_type": "markdown",
