Updated docs in 00_auth.ipynb

--- a/nbs/00_auth.ipynb
+++ b/nbs/00_auth.ipynb
@@ -1093,7 +1093,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can test the app manually by visiting:\n",
+    "### Manual Testing\n",
+    "You can test the app manually in a browser by visiting:\n",
     "- http://localhost:8000 - Home page\n",
     "- http://localhost:8000/protected - Will redirect to login\n",
     "- http://localhost:8000/auth/login - Login with test@example.com / password123\n"
