feat: improve auth routes documentation and component visualization
- Added Show() function for visualizing MonsterUI components in notebooks
- Fixed component visualization examples with proper function definitions
- Cleaned up notebook structure for better nbdev compatibility
- Added clear documentation on how to use visualization during development
- Improved examples with default login, signup, and OAuth forms
- All visualization cells marked with #| eval: false to prevent nbdev conflicts

--- a/nbs/01_routes_auth.ipynb
+++ b/nbs/01_routes_auth.ipynb
@@ -69,6 +69,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Component Visualization\n",
+    "\n",
+    "To visualize MonsterUI components in this notebook during development, run the setup cell below. This will create a JupyUvi server that can render components with proper MonsterUI styling.\n",
+    "\n",
+    "**Note**: The Show function requires a running JupyUvi server. If components aren't displaying, make sure you've run the setup cell and that the server is still running on port 8003."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script>\n",
+       "document.body.addEventListener('htmx:configRequest', (event) => {\n",
+       "    if(event.detail.path.includes('://')) return;\n",
+       "    htmx.config.selfRequestsOnly=false;\n",
+       "    event.detail.path = `${location.protocol}//${location.hostname}:8003${event.detail.path}`;\n",
+       "});\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "# Setup visualization for this notebook\n",
+    "from fasthtml.jupyter import HTMX, JupyUvi\n",
+    "import uuid\n",
+    "\n",
+    "# Create visualization app and server\n",
+    "_viz_app, _viz_rt = fast_app(hdrs=Theme.blue.headers())\n",
+    "_viz_server = JupyUvi(_viz_app, port=8003)\n",
+    "\n",
+    "def Show(component, height='auto'):\n",
+    "    \"\"\"Display a MonsterUI component in the notebook.\"\"\"\n",
+    "    path = f'/show/{uuid.uuid4().hex}'\n",
+    "    \n",
+    "    @_viz_app.route(path)\n",
+    "    def show_component():\n",
+    "        return component\n",
+    "    \n",
+    "    return HTMX(path, app=_viz_app, port=8003, height=height)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| eval: false\n",
+    "# Remember to stop the server to avoid dangling thread\n",
+    "_viz_server.stop()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Login Route"
    ]
   },
@@ -168,12 +236,39 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Login Examples\n",
-    "\n",
-    "#### Basic Usage"
+    "#| eval: false\n",
+    "def default_login_form(error=None, **kwargs):\n",
+    "    return Card(\n",
+    "        H2('Login'),\n",
+    "        Form(\n",
+    "            LabelInput('Email', \n",
+    "                      name='email', \n",
+    "                      id='email', \n",
+    "                      type='email', \n",
+    "                      required=True, \n",
+    "                      placeholder='you@example.com'),\n",
+    "            LabelInput('Password', \n",
+    "                      name='password', \n",
+    "                      id='password', \n",
+    "                      type='password', \n",
+    "                      required=True),\n",
+    "            Alert(error, variant='destructive') if error else None,\n",
+    "            Button('Sign In', type='submit', cls='w-full'),\n",
+    "            method='post',\n",
+    "            cls='space-y-4'\n",
+    "        ),\n",
+    "        P(\n",
+    "            \"Don't have an account? \",\n",
+    "            A('Sign up', href='/auth/signup', cls='text-primary hover:underline'),\n",
+    "            cls='text-center text-sm mt-4'\n",
+    "        ),\n",
+    "        cls='max-w-md mx-auto mt-8'\n",
+    "    )"
    ]
   },
   {
@@ -182,15 +277,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Simple login with all defaults\n",
-    "# login_route(app)"
+    "# Visualize the default login form\n",
+    "#Show(default_login_form(), height='500px')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Custom Form"
+    "### Login Examples\n",
+    "\n",
+    "#### Basic Usage\n",
+    "\n",
+    "The default login form includes:\n",
+    "- Email and password fields with proper input types\n",
+    "- MonsterUI styling with Card container\n",
+    "- Error handling with Alert component\n",
+    "- HTMX integration for seamless form submission\n",
+    "- Link to signup page\n",
+    "\n",
+    "```python\n",
+    "# Simple login with all defaults\n",
+    "login_route(app)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Custom Form Example"
    ]
   },
   {
@@ -240,6 +356,17 @@
     "\n",
     "# Use the custom form\n",
     "# login_route(app, login_form=branded_login_form)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| eval: false\n",
+    "# Visualize the branded login form\n",
+    "#Show(branded_login_form(), height='700px')"
    ]
   },
   {
@@ -404,6 +531,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The default signup form includes:\n",
+    "- Name, email, password, and password confirmation fields\n",
+    "- Form validation with error messages\n",
+    "- Preserves form values on validation errors\n",
+    "- HTMX integration for seamless submission\n",
+    "- Link to login page for existing users"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| eval: false  \n",
+    "# Visualize the default signup form\n",
+    "def default_signup_form(error=None, values=None, **kwargs):\n",
+    "    values = values or {}\n",
+    "    return Card(\n",
+    "        H2('Create Account'),\n",
+    "        Form(\n",
+    "            LabelInput('Name',\n",
+    "                      name='name', \n",
+    "                      id='name', \n",
+    "                      required=True, \n",
+    "                      value=values.get('name', ''),\n",
+    "                      placeholder='John Doe'),\n",
+    "            LabelInput('Email',\n",
+    "                      name='email', \n",
+    "                      id='email', \n",
+    "                      type='email', \n",
+    "                      required=True,\n",
+    "                      value=values.get('email', ''),\n",
+    "                      placeholder='you@example.com'),\n",
+    "            LabelInput('Password',\n",
+    "                      name='password', \n",
+    "                      id='password', \n",
+    "                      type='password', \n",
+    "                      required=True,\n",
+    "                      placeholder='At least 8 characters'),\n",
+    "            LabelInput('Confirm Password',\n",
+    "                      name='password_confirm', \n",
+    "                      id='password_confirm', \n",
+    "                      type='password', \n",
+    "                      required=True),\n",
+    "            Alert(error, variant='destructive') if error else None,\n",
+    "            Button('Create Account', type='submit', cls='w-full'),\n",
+    "            method='post',\n",
+    "            cls='space-y-4'\n",
+    "        ),\n",
+    "        P(\n",
+    "            \"Already have an account? \",\n",
+    "            A('Sign in', href='/auth/login', cls='text-primary hover:underline'),\n",
+    "            cls='text-center text-sm mt-4'\n",
+    "        ),\n",
+    "        cls='max-w-md mx-auto mt-8'\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Visualize the default signup form\n",
+    "#Show(default_signup_form(), height='600px')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Logout Route"
    ]
   },
@@ -517,7 +717,7 @@
    "source": [
     "## Interactive Demo\n",
     "\n",
-    "Let's create a working demo using JupyUvi:"
+    "You can create a working demo using JupyUvi:"
    ]
   },
   {
@@ -625,10 +825,7 @@
     "print(\"\\nTry creating an account and logging in!\")\n",
     "\n",
     "# Start the server\n",
-    "server = JupyUvi(demo_app)\n",
-    "\n",
-    "# Remember to stop the server when done:\n",
-    "# server.stop()"
+    "server = JupyUvi(demo_app)"
    ]
   },
   {
@@ -638,6 +835,7 @@
    "outputs": [],
    "source": [
     "#| eval: false\n",
+    "# Remember to stop the server when done:\n",
     "server.stop()"
    ]
   },
@@ -684,6 +882,13 @@
     "#     path='/tenant/{tenant_id}/login',\n",
     "#     authenticate=lambda e, p: tenant_authenticate(e, p, req.path_params['tenant_id'])\n",
     "# )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### OAuth Login Form"
    ]
   },
   {
@@ -745,15 +950,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All tests passed!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#| eval: false\n",
     "# Test with httpx\n",
@@ -789,7 +986,18 @@
     "    print(\"All tests passed!\")\n",
     "\n",
     "# Run tests against your app\n",
-    "test_auth_flow()"
+    "# test_auth_flow()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| eval: false\n",
+    "# Visualize the OAuth login form\n",
+    "# Show(oauth_login_form(), height='600px')"
    ]
   },
   {
