fix: add PERMISSION_DESCRIPTIONS to module exports
- Export PERMISSION_DESCRIPTIONS in __all__ to fix register_permission test
- Add debug output to permission management tests for better error tracking

--- a/nbs/02_permissions.ipynb
+++ b/nbs/02_permissions.ipynb
@@ -49,7 +49,7 @@
     "__all__ = ['require_auth', 'require_role', 'require_permission', 'auth_required', 'role_required', 'permission_required',\n",
     "           'get_user_permissions', 'has_permission', 'check_role_hierarchy', 'register_permission', 'get_permissions_for_role',\n",
     "           'set_role_permissions', 'add_role_permission', 'remove_role_permission', 'clear_permission_cache',\n",
-    "           'ROLE_HIERARCHY', 'ROLE_PERMISSIONS']"
+    "           'ROLE_HIERARCHY', 'ROLE_PERMISSIONS', 'PERMISSION_DESCRIPTIONS']"
    ]
   },
   {
@@ -222,7 +222,53 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "---\n",
+       "\n",
+       "[source](https://github.com/LotsOfOrg/launch-kit/blob/main/launch_kit/permissions.py#L63){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
+       "### require_auth\n",
+       "\n",
+       ">      require_auth (req, sess)\n",
+       "\n",
+       "*Check if user is authenticated.\n",
+       "\n",
+       "This is the simplest permission check - just verifies that a user is logged in.*\n",
+       "\n",
+       "|    | **Type** | **Details** |\n",
+       "| -- | -------- | ----------- |\n",
+       "| req |  | The FastHTML Request object |\n",
+       "| sess |  | The FastHTML Session object |\n",
+       "| **Returns** | **bool** | **True if user is authenticated** |"
+      ],
+      "text/plain": [
+       "---\n",
+       "\n",
+       "[source](https://github.com/LotsOfOrg/launch-kit/blob/main/launch_kit/permissions.py#L63){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
+       "### require_auth\n",
+       "\n",
+       ">      require_auth (req, sess)\n",
+       "\n",
+       "*Check if user is authenticated.\n",
+       "\n",
+       "This is the simplest permission check - just verifies that a user is logged in.*\n",
+       "\n",
+       "|    | **Type** | **Details** |\n",
+       "| -- | -------- | ----------- |\n",
+       "| req |  | The FastHTML Request object |\n",
+       "| sess |  | The FastHTML Session object |\n",
+       "| **Returns** | **bool** | **True if user is authenticated** |"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "show_doc(require_auth)"
    ]
@@ -278,7 +324,55 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "---\n",
+       "\n",
+       "[source](https://github.com/LotsOfOrg/launch-kit/blob/main/launch_kit/permissions.py#L91){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
+       "### require_role\n",
+       "\n",
+       ">      require_role (role:str, req, sess)\n",
+       "\n",
+       "*Check if user has the required role or higher in the hierarchy.\n",
+       "\n",
+       "Uses role hierarchy so admins can access moderator areas, etc.*\n",
+       "\n",
+       "|    | **Type** | **Details** |\n",
+       "| -- | -------- | ----------- |\n",
+       "| role | str | The required role |\n",
+       "| req |  | The FastHTML Request object |\n",
+       "| sess |  | The FastHTML Session object |\n",
+       "| **Returns** | **bool** | **True if user has the required role or higher** |"
+      ],
+      "text/plain": [
+       "---\n",
+       "\n",
+       "[source](https://github.com/LotsOfOrg/launch-kit/blob/main/launch_kit/permissions.py#L91){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
+       "### require_role\n",
+       "\n",
+       ">      require_role (role:str, req, sess)\n",
+       "\n",
+       "*Check if user has the required role or higher in the hierarchy.\n",
+       "\n",
+       "Uses role hierarchy so admins can access moderator areas, etc.*\n",
+       "\n",
+       "|    | **Type** | **Details** |\n",
+       "| -- | -------- | ----------- |\n",
+       "| role | str | The required role |\n",
+       "| req |  | The FastHTML Request object |\n",
+       "| sess |  | The FastHTML Session object |\n",
+       "| **Returns** | **bool** | **True if user has the required role or higher** |"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "show_doc(require_role)"
    ]
@@ -358,7 +452,55 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "---\n",
+       "\n",
+       "[source](https://github.com/LotsOfOrg/launch-kit/blob/main/launch_kit/permissions.py#L141){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
+       "### require_permission\n",
+       "\n",
+       ">      require_permission (permission:str, req, sess)\n",
+       "\n",
+       "*Check if user has a specific permission.\n",
+       "\n",
+       "This is for granular permission checking beyond roles.*\n",
+       "\n",
+       "|    | **Type** | **Details** |\n",
+       "| -- | -------- | ----------- |\n",
+       "| permission | str | The required permission |\n",
+       "| req |  | The FastHTML Request object |\n",
+       "| sess |  | The FastHTML Session object |\n",
+       "| **Returns** | **bool** | **True if user has permission** |"
+      ],
+      "text/plain": [
+       "---\n",
+       "\n",
+       "[source](https://github.com/LotsOfOrg/launch-kit/blob/main/launch_kit/permissions.py#L141){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
+       "### require_permission\n",
+       "\n",
+       ">      require_permission (permission:str, req, sess)\n",
+       "\n",
+       "*Check if user has a specific permission.\n",
+       "\n",
+       "This is for granular permission checking beyond roles.*\n",
+       "\n",
+       "|    | **Type** | **Details** |\n",
+       "| -- | -------- | ----------- |\n",
+       "| permission | str | The required permission |\n",
+       "| req |  | The FastHTML Request object |\n",
+       "| sess |  | The FastHTML Session object |\n",
+       "| **Returns** | **bool** | **True if user has permission** |"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "show_doc(require_permission)"
    ]
@@ -830,7 +972,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing core permission functions...\n",
+      "✓ require_auth working\n",
+      "✓ Role hierarchy working\n",
+      "✓ require_role working\n",
+      "✓ Permission checks working\n",
+      "✓ require_permission working\n",
+      "\n",
+      "✅ All core function tests passed!\n"
+     ]
+    }
+   ],
    "source": [
     "#| hide\n",
     "# Test core permission functions\n",
@@ -901,14 +1058,37 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing permission management...\n",
+      "PERMISSION_DESCRIPTIONS exists: True\n",
+      "PERMISSION_DESCRIPTIONS type: <class 'dict'>\n",
+      "PERMISSION_DESCRIPTIONS content: {'read_own_data': \"Read user's own data\", 'update_own_data': \"Update user's own data\", 'delete_own_data': \"Delete user's own data\", 'read_all_data': \"Read all users' data\", 'moderate_content': 'Moderate user-generated content', 'manage_users': 'Create, update, delete other users', 'delete_users': 'Delete user accounts', 'view_sensitive_data': 'View sensitive system data', 'export_data': 'Export system data to CSV', 'view_analytics': 'View analytics dashboard'}\n",
+      "After register_permission, PERMISSION_DESCRIPTIONS: {'read_own_data': \"Read user's own data\", 'update_own_data': \"Update user's own data\", 'delete_own_data': \"Delete user's own data\", 'read_all_data': \"Read all users' data\", 'moderate_content': 'Moderate user-generated content', 'manage_users': 'Create, update, delete other users', 'delete_users': 'Delete user accounts', 'view_sensitive_data': 'View sensitive system data', 'export_data': 'Export system data to CSV', 'view_analytics': 'View analytics dashboard', 'test_permission': 'A test permission'}\n",
+      "✓ Permission registration working\n",
+      "✓ Role permission management working\n",
+      "\n",
+      "✅ All permission management tests passed!\n"
+     ]
+    }
+   ],
    "source": [
     "#| hide\n",
     "# Test permission management\n",
     "print(\"Testing permission management...\")\n",
     "\n",
+    "# Debug: Check if PERMISSION_DESCRIPTIONS exists and its content\n",
+    "print(f\"PERMISSION_DESCRIPTIONS exists: {'PERMISSION_DESCRIPTIONS' in globals()}\")\n",
+    "if 'PERMISSION_DESCRIPTIONS' in globals():\n",
+    "    print(f\"PERMISSION_DESCRIPTIONS type: {type(PERMISSION_DESCRIPTIONS)}\")\n",
+    "    print(f\"PERMISSION_DESCRIPTIONS content: {PERMISSION_DESCRIPTIONS}\")\n",
+    "\n",
     "# Test registering permissions\n",
     "register_permission('test_permission', 'A test permission')\n",
+    "print(f\"After register_permission, PERMISSION_DESCRIPTIONS: {PERMISSION_DESCRIPTIONS}\")\n",
     "assert 'test_permission' in PERMISSION_DESCRIPTIONS\n",
     "assert PERMISSION_DESCRIPTIONS['test_permission'] == 'A test permission'\n",
     "print(\"✓ Permission registration working\")\n",
@@ -942,7 +1122,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing decorators...\n",
+      "✓ auth_required redirects when not authenticated\n",
+      "✓ auth_required allows authenticated users\n",
+      "✓ role_required redirects when not authenticated\n",
+      "✓ role_required returns 403 for insufficient role\n",
+      "✓ role_required allows users with correct role\n",
+      "✓ permission_required allows users with permission\n",
+      "✓ permission_required returns 403 for insufficient permission\n",
+      "\n",
+      "✅ All decorator tests passed!\n"
+     ]
+    }
+   ],
    "source": [
     "#| hide\n",
     "# Test decorators\n",
@@ -1017,7 +1214,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing _extract_req_sess helper...\n",
+      "✓ Extracts from positional args\n",
+      "✓ Extracts from keyword args\n",
+      "✓ Extracts from mixed args\n",
+      "\n",
+      "✅ All helper tests passed!\n"
+     ]
+    }
+   ],
    "source": [
     "#| hide\n",
     "# Test _extract_req_sess helper\n",
@@ -1060,7 +1270,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script>\n",
+       "document.body.addEventListener('htmx:configRequest', (event) => {\n",
+       "    if(event.detail.path.includes('://')) return;\n",
+       "    htmx.config.selfRequestsOnly=false;\n",
+       "    event.detail.path = `${location.protocol}//${location.hostname}:8000${event.detail.path}`;\n",
+       "});\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#| eval: false\n",
     "# Complete demo app showing all permission features\n",
@@ -1197,7 +1427,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stopping server...\n"
+     ]
+    }
+   ],
    "source": [
     "#| eval: false\n",
     "# Stop the server gracefully\n",
