Fixed signup form redirect path

--- a/nbs/01_routes_auth.ipynb
+++ b/nbs/01_routes_auth.ipynb
@@ -249,7 +249,7 @@
     "        ),\n",
     "        P(\n",
     "            \"Don't have an account? \",\n",
-    "            A('Sign up', href='/auth/signup', cls='text-primary hover:underline'),\n",
+    "            A('Sign up', href='/signup', cls='text-primary hover:underline'),\n",
     "            cls='text-center text-sm mt-4'\n",
     "        ),\n",
     "        cls='max-w-md mx-auto mt-8'\n",
@@ -328,7 +328,7 @@
     "                DividerSplit('Or'),\n",
     "                P(\n",
     "                    \"Don't have an account? \",\n",
-    "                    A('Sign up', href='/auth/signup', cls='text-primary hover:underline'),\n",
+    "                    A('Sign up', href='/signup', cls='text-primary hover:underline'),\n",
     "                    cls='text-center text-sm'\n",
     "                ),\n",
     "                method='post',\n",
